--- a/PortfolioWebApp.csproj
+++ b/PortfolioWebApp.csproj
@@ -23,10 +23,14 @@
     <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
     <None Remove="ClientApp\Models\" />
+    <None Remove="ClientApp\src\components\TerminalComponents\" />
+    <None Remove="ClientApp\src\components\StockSimComponents\" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="ClientApp\Models\" />
+    <Folder Include="ClientApp\src\components\TerminalComponents\" />
+    <Folder Include="ClientApp\src\components\StockSimComponents\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
