--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,7 @@
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "PolygonApiKey": "GyNDQDfHhO66Xi92XXE1nSiFup6qdI1v"
 }
 
