--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,14 @@
 ﻿{
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StockSimulatorConnection": "Data Source=stockSim.db"
+  },
+  "PolygonApiKey": "GyNDQDfHhO66Xi92XXE1nSiFup6qdI1v"
 }
-
