--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -8,6 +8,8 @@
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
     "merge": "^2.1.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -16,7 +18,6 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
-    "rimraf": "^5.0.0",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
@@ -41,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "nan": "^2.17.0",
+    "rimraf": "^5.0.5",
     "typescript": "^4.9.5"
   },
   "overrides": {
