--- a/PortfolioWebApp.csproj
+++ b/PortfolioWebApp.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+    <PackageReference Include="Moment.js" Version="2.29.4" />
   </ItemGroup>
 
   <ItemGroup>
