--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.9",
+    "source-map": "^0.7.4",
     "web-vitals": "^3.3.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
