--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -20,6 +20,7 @@
     "reactstrap": "^9.1.9",
     "rimraf": "^5.0.0",
     "web-vitals": "^3.3.1",
+    "webpack-dev-server": "^4.15.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
     "workbox-cacheable-response": "^6.5.4",
@@ -34,6 +35,7 @@
     "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "ajv": "^8.12.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.39.0",
