--- a/portfolio-web-app-backend/appsettings.Development.json
+++ b/portfolio-web-app-backend/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "PolygonApiKey": "GyNDQDfHhO66Xi92XXE1nSiFup6qdI1v"
 }
