--- a/portfolio-web-app-backend/appsettings.json
+++ b/portfolio-web-app-backend/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StockSimulatorConnection": "Data Source=stockSim.db"
+  },
+  "PolygonApiKey": "GyNDQDfHhO66Xi92XXE1nSiFup6qdI1v"
 }
