--- a/portfolio-web-app/package.json
+++ b/portfolio-web-app/package.json
@@ -15,12 +15,13 @@
     "chart.js": "^4.4.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "reactstrap": "^9.2.1"
+    "reactstrap": "^9.2.1",
+    "scheduler": "^0.23.0"
   },
   "devDependencies": {
     "@types/node": "^20",
