--- a/portfolio-web-app-backend/portfolio-web-app-backend.csproj
+++ b/portfolio-web-app-backend/portfolio-web-app-backend.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="wwwroot/**" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
