--- a/portfolio-web-app/package.json
+++ b/portfolio-web-app/package.json
@@ -25,10 +25,12 @@
     "scheduler": "^0.23.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
