--- a/portfolio-web-app/package.json
+++ b/portfolio-web-app/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "terser-webpack-plugin": "^5.3.10",
     "typescript": "5.4.5"
   }
 }
